--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -6,6 +6,6 @@ subheadline: "Erro HTTP 404"
 sitemap: false
 permalink: "/404.html"
 header:
-   image_fullwidth: banner_eres2021.png
+   image_fullwidth: Banner_principalERES2023.jpg
 ---
 Ocorreu um erro. Tente novamente em breve.
