--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -1,12 +1,13 @@
 ---
-layout: page
-title: "Infelizmente a página solicitada não está disponivel...."
+layout: page-fullwidth
+title: "Página não disponivel."
 subheadline: "Erro HTTP 404"
 #teaser: "Talvez a página tenha sido excluída!"
 sitemap: false
 permalink: "/404.html"
 header:
-  image_fullwidth: Banner_principalERES2024.jpg
+  image_fullwidth: ERES-2024_Logo.png
 ---
 
-Ocorreu um erro. Tente novamente em breve.
+<p>Infelizmente a página solicitada não está disponível. Talvez a página tenha sido excluída ou o link que você acessou esteja quebrado.</p>
+<p style="margin-top: -1rem">Por favor, <a href="{{ site.url }}">clique aqui</a> para retornar à página inicial do site.</p>
